--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,15 +1,15 @@
-{% set version = "2016.2.1" %}
+{% set name = "pytools" %}
+{% set version = "2016.2.3" %}
+{% set sha256 = "c5ef4a7ff356a007a75a55d4f1c55b896a7b4284bddf8246e3d8bf33560be747" %}
 
 package:
-    name: pytools
-    version: {{ version }}
+  name: {{ name|lower }}
+  version: {{ version }}
 
 source:
-    fn: pytools-{{ version }}.tar.gz
-    url: https://pypi.io/packages/source/p/pytools/pytools-{{ version }}.tar.gz
-    md5: 452dfa3023733a675cc1bee91c536cbd
-    patches:
-        - encoding.patch  # [win and py3k]
+    fn: {{ name }}-{{ version }}.tar.gz
+    url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
+    sha256: {{ sha256 }}
 
 build:
     number: 0
@@ -19,6 +19,7 @@ requirements:
     build:
         - python
         - setuptools
+        - six
     run:
         - python
         - numpy
@@ -27,13 +28,25 @@ requirements:
         - six
 
 test:
+    requires:
+        - pytest
     imports:
         - pytools
+  commands:
+    - cd $SRC_DIR/test && python -m pytest  # [unix]
+  dev_url: http://github.com/inducer/pytools
+
 
 about:
     home: http://pypi.python.org/pypi/pytools
     license: MIT
     summary: A collection of tools for Python
+
+    description: |
+        Pytools is a big bag of things that are “missing” from the Python standard
+        library. This is mainly a dependency of my other software packages, and is
+        probably of little interest to you unless you use those. If you’re curious
+        nonetheless, here’s what’s on offer.
 
 extra:
     recipe-maintainers:
