--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "pytools" %}
-{% set version = "2016.2.3" %}
-{% set sha256 = "c5ef4a7ff356a007a75a55d4f1c55b896a7b4284bddf8246e3d8bf33560be747" %}
+{% set version = "2016.2.4" %}
+{% set sha256 = "4d033ae97e83129f21c4af56ca0df752bc3cd92c9f81669b72f0d3071620def5" %}
 
 package:
     name: {{ name|lower }}
@@ -39,6 +39,7 @@ test:
 about:
     home: http://pypi.python.org/pypi/{{ name }}
     license: MIT
+    license_file: LICENSE
     summary: A collection of tools for Python
 
     description: |
