--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -47,10 +47,10 @@ about:
     summary: A collection of tools for Python
 
     description: |
-        Pytools is a big bag of things that are “missing” from the Python standard
+        Pytools is a big bag of things that are "missing" from the Python standard
         library. This is mainly a dependency of my other software packages, and is
-        probably of little interest to you unless you use those. If you’re curious
-        nonetheless, here’s what’s on offer.
+        probably of little interest to you unless you use those. If you're curious
+        nonetheless, here's what's on offer.
 
     dev_url: http://github.com/inducer/{{ name }}
 
