--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -32,9 +32,11 @@ test:
         - pytest
     imports:
         - {{ name }}
+    source_files:
+        - test
     commands:
-        - cd $SRC_DIR/test && python -m pytest  # [unix]
-        - cd %SRC_DIR%/test && python -m pytest  # [win]
+        - cd test && python -m pytest  # [unix]
+        - cd test && python -m pytest  # [win]
 
 
 about:
