--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -35,8 +35,7 @@ test:
     source_files:
         - test
     commands:
-        - cd test && python -m pytest  # [unix]
-        - cd test && python -m pytest  # [win]
+        - cd test && python -m pytest
 
 
 about:
