--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,6 +14,7 @@ source:
 
 build:
     number: {{ build_number }}
+    noarch: python
     script: python setup.py install --single-version-externally-managed --record record.txt
 
 requirements:
