--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -15,13 +15,14 @@ source:
 build:
     number: {{ build_number }}
     noarch: python
-    script: python setup.py install --single-version-externally-managed --record record.txt
+    script: python -m pip install --no-deps --ignore-installed .
 
 requirements:
     build:
         - python
         - setuptools
         - six
+        - pip
     run:
         - python
         - numpy
