--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,19 +1,16 @@
 {% set name = "pytools" %}
 {% set version = "2022.1.8" %}
-{% set build_number = 0 %}
-{% set sha256 = "1d793b4e01dd23704b62237ea5725d7ce772870fab7863f7903c41017bf5d79b" %}
 
 package:
   name: {{ name|lower }}
   version: {{ version }}
 
 source:
-  fn: {{ name }}-{{ version }}.tar.gz
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
-  sha256: {{ sha256 }}
+  sha256: 1d793b4e01dd23704b62237ea5725d7ce772870fab7863f7903c41017bf5d79b
 
 build:
-  number: {{ build_number }}
+  number: 0
   noarch: python
   script: {{ PYTHON }} -m pip install . --no-deps -vv
 
@@ -24,15 +21,16 @@ requirements:
     - pip
   run:
     - python >=3.6
+    - numpy >=1.6.0
+    - platformdirs >=2.2.0
     - typing_extensions
     - appdirs >=1.4.0
 
 test:
   requires:
     - pytest
-    - numpy
   imports:
-    - {{ name }}
+    - pytools
   source_files:
     - test
   commands:
@@ -40,7 +38,7 @@ test:
 
 
 about:
-  home: https://pypi.python.org/pypi/{{ name }}
+  home: https://pypi.python.org/pypi/pytools
   license: MIT
   license_file: LICENSE
   summary: A collection of tools for Python
@@ -51,8 +49,8 @@ about:
     probably of little interest to you unless you use those. If you're curious
     nonetheless, here's what's on offer.
 
-  dev_url: https://github.com/inducer/{{ name }}
-  doc_url: https://documen.tician.de/{{ name }}
+  dev_url: https://github.com/inducer/pytools
+  doc_url: https://documen.tician.de/pytools
 
 extra:
   recipe-maintainers:
