--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,18 +12,17 @@ source:
 build:
   number: 0
   noarch: python
-  script: {{ PYTHON }} -m pip install . --no-deps -vv
+  script: {{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation
 
 requirements:
   host:
-    - python >=3.6
+    - python >=3.8
     - setuptools
     - pip
   run:
-    - python >=3.6
+    - python >=3.8
     - platformdirs >=2.2.0
     - typing_extensions
-    - appdirs >=1.4.0
 
 test:
   requires:
@@ -32,11 +31,8 @@ test:
     - numpy >=1.6.0
   imports:
     - pytools
-  source_files:
-    - test
   commands:
     - pip check
-    - cd test && python -m pytest
 
 about:
   home: https://pypi.python.org/pypi/pytools
