--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -29,10 +29,11 @@ test:
     - pytest
     - pip
     - numpy >=1.6.0
-  imports:
-    - pytools
+  source_files:
+    - test
   commands:
     - pip check
+    - cd test && python -m pytest
 
 about:
   home: https://pypi.python.org/pypi/pytools
